--- a/ApartmentAPI/WebApi/WebApi.csproj
+++ b/ApartmentAPI/WebApi/WebApi.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="NLog" Version="5.2.5" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.5" />
   </ItemGroup>
 
   <ItemGroup>
